--- a/results.html
+++ b/results.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<!-- This page poses the font page of the game of Rock, Paper, Scissors, Lizzard, Spock -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Rock, Paper, Scissors, Lizard, Spock Game</title>
+    <title>Document</title>
 
     <script type="text/javascript" src="./assets/jscript/game.js"></script>
 </head>
 <body>
     <header>
-        <h1>Rock, Paper, Scissors, Lizard, Spock Game</h1>
+        <h1>Results</h1>
     </header>
     <section>
-        <h2>Game</h2>
-        <div id="beginButton"><a href="game.html">Begin</a></div>
+        <div id="#results-window">
+
+        </div>
     </section>
 </body>
 </html>
