Add images and styles to the game and the homepage

--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <title>Game - Rock, Paper, Scissors, Lizzard, Spock</title>
 
     <script type="text/javascript" src="./assets/jscript/game.js"></script>
-    <link rel="stylesheet" href="./assets/css/stlye.css">
+    <link rel="stylesheet" href="./assets/css/game.css">
 </head>
 
 <body>
@@ -16,57 +16,101 @@
         <h1>Game</h1>
     </header>
     <section>
-        <div id="settings-panel">
+        <div id="settings-panel" class="gray-border">
             <label for="number-of-attempts-setting">Number of possible attempts:</label>
             <input id="number-of-attempts-setting" type="text">
         </div>
     </section>
     <section>
         <div id="game-window">
-            <div id="score-panel">
+            <div id="score-panel" class="gray-border">
                 <label for="computer-score">Computer:</label>
                 <span id="computer-score">0</span>
                 <label for="user-score">User</label>
                 <span id="user-score">0</span>
             </div>
             <!-- Inside this div live the 'quasi' buttons the computer picks -->
-            <div id="computer-option-panel">
+            <div id="computer-option-panel" class="gray-border">
                 <div id="computer-rock-button" class="player-option-picker">
-                    ROCK
+                    <img id="computer-rock-button-image" src="./assets/images/webp/rock.webp" alt="image of a rock">
+                    <img id="computer-rock-button-image-green" src="./assets/images/webp/button-green.webp"
+                        alt="image green button">
+                    <img id="computer-rock-button-image-red" src="./assets/images/webp/button-red.webp"
+                        alt="image red button">
                 </div>
                 <div id="computer-paper-button" class="player-option-picker">
-                    PAPER
+                    <img id="computer-paper-button-image" src="./assets/images/webp/paper.webp"
+                        alt="image of a sheet of paper">
+                    <img id="computer-paper-button-image-green" src="./assets/images/webp/button-green.webp"
+                        alt="image green button">
+                    <img id="computer-paper-button-image-red" src="./assets/images/webp/button-red.webp"
+                        alt="image red button">
                 </div>
                 <div id="computer-scissors-button" class="player-option-picker">
-                    SCISSORS
+                    <img id="computer-scissors-button-image" alt="image of scissors"
+                        src="./assets/images/webp/scissors.webp">
+                    <img id="computer-scissors-button-image-green" alt="image green button"
+                        src="./assets/images/webp/button-green.webp">
+                    <img id="computer-scissors-button-image-red" alt="image red button"
+                        src="./assets/images/webp/button-red.webp">
                 </div>
-                <div id="computer-lizzard-button" class="player-option-picker">
-                    LIZZARD
+                <div id="computer-lizard-button" class="player-option-picker">
+                    <img id="computer-lizard-button-image" alt="image of lizard" src="./assets/images/webp/lizard.webp">
+                    <img id="computer-lizard-button-image-green" alt="image green button" src="./assets/images/webp/button-green.webp">
+                    <img id="computer-lizard-button-image-red" alt="image red button" src="./assets/images/webp/button-red.webp">
                 </div>
                 <div id="computer-spock-button" class="player-option-picker">
-                    SPOCK
+                    <img id="computer-spock-button-image" alt="image of spock" src="./assets/images/webp/spock.webp">
+                    <img id="computer-spock-button-image-green" alt="image green button" src="./assets/images/webp/button-green.webp">
+                    <img id="computer-spock-button-image-red" alt="image red button" src="./assets/images/webp/button-red.webp">
                 </div>
             </div>
             <!-- Messages such as 'You win', 'You lose', 'Game  Over' will appear inside this div-->
-            <div id="message-panel">
+            <div id="message-panel" class="gray-border">
                 <button id="begin-button" onclick="view.beginOnClick();">Begin</button>
             </div>
             <!-- Inside this div live the buttons user can click to play the game -->
-            <div id="user-option-panel">
+            <div id="user-option-panel" class="gray-border">
                 <div id="user-rock-button" class="player-option-picker">
-                    ROCK
+                    <img id="user-rock-button-image" src="./assets/images/webp/rock.webp" alt="image of a rock">
+                    <img id="user-rock-button-image-gray" alt="image gray button"
+                        src="./assets/images/webp/button-gray.webp">
+                    <img id="user-rock-button-image-green" alt="image green button"
+                        src="./assets/images/webp/button-green.webp">
+                    <img id="user-rock-button-image-red" alt="image red button"
+                        src="./assets/images/webp/button-red.webp">
                 </div>
                 <div id="user-paper-button" class="player-option-picker">
-                    PAPER
+                    <img id="user-paper-button-image" src="./assets/images/webp/paper.webp"
+                        alt="image of a sheet of paper">
+                    <img id="user-paper-button-image-gray" alt="image gray button"
+                        src="./assets/images/webp/button-gray.webp">
+                    <img id="user-paper-button-image-green" alt="image green button"
+                        src="./assets/images/webp/button-green.webp">
+                    <img id="user-paper-button-image-red" alt="image green button"
+                        src="./assets/images/webp/button-red.webp">
                 </div>
                 <div id="user-scissors-button" class="player-option-picker">
-                    SCISSORS
+                    <img id="user-scissors-button-image" alt="image of scissors"
+                        src="./assets/images/webp/scissors.webp">
+                    <img id="user-scissors-button-image-green" alt="image green button"
+                        src="./assets/images/webp/button-green.webp">
+                    <img id="user-scissors-button-image-red" alt="image red button"
+                        src="./assets/images/webp/button-red.webp">
                 </div>
-                <div id="user-lizzard-button" class="player-option-picker">
-                    LIZZARD
+                <div id="user-lizard-button" class="player-option-picker">
+                    <img id="user-lizard-button-image" alt="image of lizard" src="./assets/images/webp/lizard.webp">
+                    <img id="user-lizard-button-image-green" alt="image green button"
+                        src="./assets/images/webp/button-green.webp">
+                    <img id="user-lizard-button-image-red" alt="image red button"
+                        src="./assets/images/webp/button-red.webp">
                 </div>
                 <div id="user-spock-button" class="player-option-picker">
-                    SPOCK
+                    <img id="user-spock-button-image" alt="image of spock" src="./assets/images/webp/spock.webp">
+                    <img id="user-spock-button-image-green" alt="image green button"
+                        src="./assets/images/webp/button-green.webp">
+                    <img id="user-spock-button-image-red" alt="image red button"
+                        src="./assets/images/webp/button-red.webp">
                 </div>
             </div>
         </div>
