--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game - Rock, Paper, Scissors, Lizzard, Spock</title>
 
-    <script type="text/javascript" src="./assets/jscript/game.js"></script>
+
     <link rel="stylesheet" href="./assets/css/game.css">
 </head>
 
@@ -18,7 +18,7 @@
     <section>
         <div id="settings-panel" class="gray-border">
             <label for="number-of-attempts-setting">Number of possible attempts:</label>
-            <input id="number-of-attempts-setting" type="text">
+            <input id="number-of-attempts-setting" type="text" value="5">
         </div>
     </section>
     <section>
@@ -56,13 +56,17 @@
                 </div>
                 <div id="computer-lizard-button" class="player-option-picker">
                     <img id="computer-lizard-button-image" alt="image of lizard" src="./assets/images/webp/lizard.webp">
-                    <img id="computer-lizard-button-image-green" alt="image green button" src="./assets/images/webp/button-green.webp">
-                    <img id="computer-lizard-button-image-red" alt="image red button" src="./assets/images/webp/button-red.webp">
+                    <img id="computer-lizard-button-image-green" alt="image green button"
+                        src="./assets/images/webp/button-green.webp">
+                    <img id="computer-lizard-button-image-red" alt="image red button"
+                        src="./assets/images/webp/button-red.webp">
                 </div>
                 <div id="computer-spock-button" class="player-option-picker">
                     <img id="computer-spock-button-image" alt="image of spock" src="./assets/images/webp/spock.webp">
-                    <img id="computer-spock-button-image-green" alt="image green button" src="./assets/images/webp/button-green.webp">
-                    <img id="computer-spock-button-image-red" alt="image red button" src="./assets/images/webp/button-red.webp">
+                    <img id="computer-spock-button-image-green" alt="image green button"
+                        src="./assets/images/webp/button-green.webp">
+                    <img id="computer-spock-button-image-red" alt="image red button"
+                        src="./assets/images/webp/button-red.webp">
                 </div>
             </div>
             <!-- Messages such as 'You win', 'You lose', 'Game  Over' will appear inside this div-->
@@ -93,6 +97,8 @@
                 <div id="user-scissors-button" class="player-option-picker">
                     <img id="user-scissors-button-image" alt="image of scissors"
                         src="./assets/images/webp/scissors.webp">
+                    <img id="user-scissors-button-image-gray" alt="image gray button"
+                        src="./assets/images/webp/button-gray.webp">
                     <img id="user-scissors-button-image-green" alt="image green button"
                         src="./assets/images/webp/button-green.webp">
                     <img id="user-scissors-button-image-red" alt="image red button"
@@ -100,6 +106,8 @@
                 </div>
                 <div id="user-lizard-button" class="player-option-picker">
                     <img id="user-lizard-button-image" alt="image of lizard" src="./assets/images/webp/lizard.webp">
+                    <img id="user-lizard-button-image-gray" alt="image gray button"
+                        src="./assets/images/webp/button-gray.webp">
                     <img id="user-lizard-button-image-green" alt="image green button"
                         src="./assets/images/webp/button-green.webp">
                     <img id="user-lizard-button-image-red" alt="image red button"
@@ -107,6 +115,8 @@
                 </div>
                 <div id="user-spock-button" class="player-option-picker">
                     <img id="user-spock-button-image" alt="image of spock" src="./assets/images/webp/spock.webp">
+                    <img id="user-spock-button-image-gray" alt="image gray button"
+                        src="./assets/images/webp/button-gray.webp">
                     <img id="user-spock-button-image-green" alt="image green button"
                         src="./assets/images/webp/button-green.webp">
                     <img id="user-spock-button-image-red" alt="image red button"
@@ -115,6 +125,7 @@
             </div>
         </div>
     </section>
+    <script type="text/javascript" src="./assets/jscript/game.js"></script>
 </body>
 
 </html>
