--- a/game.html
+++ b/game.html
@@ -15,116 +15,62 @@
     <header>
         <h1>Game</h1>
     </header>
-    <section>
-        <div id="settings-panel" class="gray-border">
-            <label for="number-of-attempts-setting">Number of possible attempts:</label>
-            <input id="number-of-attempts-setting" type="text" value="5">
+    <div id="canvas">
+        <div id="computer-score">0</div>
+        <div id="settings-panel">
+            <label for="rounds">Choose number of rounds:<br></label>
+            <select name="rounds" id="rounds" onchange="game.setNumberOfRounds(this.value)">
+                <option value="3">3</option>
+                <option value="5">5</option>
+                <option value="7">7</option>
+                <option value="11">11</option>
+            </select>
         </div>
-    </section>
-    <section>
-        <div id="game-window">
-            <div id="score-panel" class="gray-border">
-                <label for="computer-score">Computer:</label>
-                <span id="computer-score">0</span>
-                <label for="user-score">User</label>
-                <span id="user-score">0</span>
+        <div id="rounds-counter-panel">
+            <div id="rounds-counter-text">ROUND</div>
+            <div id="rounds-counter">0</div>
+        </div>
+        <div id="user-score">0</div>
+        <div id="computer-pick-image-panel"><img id="computer-pick-image" alt="image question mark"
+                src="./assets/images/webp/question.webp"></div>
+        <div id="user-pick-image-panel"><img id="user-pick-image" alt="image question mark"
+                src="./assets/images/webp/question.webp"></div>
+        <div id="versus-text">VS.</div>
+        <div id="message-text">message</div>
+        <div id="outcome-text">Outcome!</div>
+        <div id="user-pick-image"></div>
+        <div id="restart-button" onclick="view.startOverOnClick();">
+            <img alt="image question mark" src="./assets/images/webp/restart.webp">
+        </div>
+        <!-- Inside this div live the buttons user can click to play the game -->
+        <div id="user-option-panel" class="gray-border">
+            <div id="user-rock-button" class="player-option-picker">
+                <img id="user-rock-button-image" src="./assets/images/webp/rock.webp" alt="image of a rock">
+                <img id="user-rock-button-image-gray" alt="image gray button"
+                    src="./assets/images/webp/button-gray.webp">
             </div>
-            <!-- Inside this div live the 'quasi' buttons the computer picks -->
-            <div id="computer-option-panel" class="gray-border">
-                <div id="computer-rock-button" class="player-option-picker">
-                    <img id="computer-rock-button-image" src="./assets/images/webp/rock.webp" alt="image of a rock">
-                    <img id="computer-rock-button-image-green" src="./assets/images/webp/button-green.webp"
-                        alt="image green button">
-                    <img id="computer-rock-button-image-red" src="./assets/images/webp/button-red.webp"
-                        alt="image red button">
-                </div>
-                <div id="computer-paper-button" class="player-option-picker">
-                    <img id="computer-paper-button-image" src="./assets/images/webp/paper.webp"
-                        alt="image of a sheet of paper">
-                    <img id="computer-paper-button-image-green" src="./assets/images/webp/button-green.webp"
-                        alt="image green button">
-                    <img id="computer-paper-button-image-red" src="./assets/images/webp/button-red.webp"
-                        alt="image red button">
-                </div>
-                <div id="computer-scissors-button" class="player-option-picker">
-                    <img id="computer-scissors-button-image" alt="image of scissors"
-                        src="./assets/images/webp/scissors.webp">
-                    <img id="computer-scissors-button-image-green" alt="image green button"
-                        src="./assets/images/webp/button-green.webp">
-                    <img id="computer-scissors-button-image-red" alt="image red button"
-                        src="./assets/images/webp/button-red.webp">
-                </div>
-                <div id="computer-lizard-button" class="player-option-picker">
-                    <img id="computer-lizard-button-image" alt="image of lizard" src="./assets/images/webp/lizard.webp">
-                    <img id="computer-lizard-button-image-green" alt="image green button"
-                        src="./assets/images/webp/button-green.webp">
-                    <img id="computer-lizard-button-image-red" alt="image red button"
-                        src="./assets/images/webp/button-red.webp">
-                </div>
-                <div id="computer-spock-button" class="player-option-picker">
-                    <img id="computer-spock-button-image" alt="image of spock" src="./assets/images/webp/spock.webp">
-                    <img id="computer-spock-button-image-green" alt="image green button"
-                        src="./assets/images/webp/button-green.webp">
-                    <img id="computer-spock-button-image-red" alt="image red button"
-                        src="./assets/images/webp/button-red.webp">
-                </div>
+            <div id="user-paper-button" class="player-option-picker">
+                <img id="user-paper-button-image" src="./assets/images/webp/paper.webp" alt="image of a sheet of paper">
+                <img id="user-paper-button-image-gray" alt="image gray button"
+                    src="./assets/images/webp/button-gray.webp">
             </div>
-            <!-- Messages such as 'You win', 'You lose', 'Game  Over' will appear inside this div-->
-            <div id="message-panel" class="gray-border">
-                <button id="begin-button" onclick="view.beginOnClick();">Begin</button>
+            <div id="user-scissors-button" class="player-option-picker">
+                <img id="user-scissors-button-image" alt="image of scissors" src="./assets/images/webp/scissors.webp">
+                <img id="user-scissors-button-image-gray" alt="image gray button"
+                    src="./assets/images/webp/button-gray.webp">
             </div>
-            <!-- Inside this div live the buttons user can click to play the game -->
-            <div id="user-option-panel" class="gray-border">
-                <div id="user-rock-button" class="player-option-picker">
-                    <img id="user-rock-button-image" src="./assets/images/webp/rock.webp" alt="image of a rock">
-                    <img id="user-rock-button-image-gray" alt="image gray button"
-                        src="./assets/images/webp/button-gray.webp">
-                    <img id="user-rock-button-image-green" alt="image green button"
-                        src="./assets/images/webp/button-green.webp">
-                    <img id="user-rock-button-image-red" alt="image red button"
-                        src="./assets/images/webp/button-red.webp">
-                </div>
-                <div id="user-paper-button" class="player-option-picker">
-                    <img id="user-paper-button-image" src="./assets/images/webp/paper.webp"
-                        alt="image of a sheet of paper">
-                    <img id="user-paper-button-image-gray" alt="image gray button"
-                        src="./assets/images/webp/button-gray.webp">
-                    <img id="user-paper-button-image-green" alt="image green button"
-                        src="./assets/images/webp/button-green.webp">
-                    <img id="user-paper-button-image-red" alt="image green button"
-                        src="./assets/images/webp/button-red.webp">
-                </div>
-                <div id="user-scissors-button" class="player-option-picker">
-                    <img id="user-scissors-button-image" alt="image of scissors"
-                        src="./assets/images/webp/scissors.webp">
-                    <img id="user-scissors-button-image-gray" alt="image gray button"
-                        src="./assets/images/webp/button-gray.webp">
-                    <img id="user-scissors-button-image-green" alt="image green button"
-                        src="./assets/images/webp/button-green.webp">
-                    <img id="user-scissors-button-image-red" alt="image red button"
-                        src="./assets/images/webp/button-red.webp">
-                </div>
-                <div id="user-lizard-button" class="player-option-picker">
-                    <img id="user-lizard-button-image" alt="image of lizard" src="./assets/images/webp/lizard.webp">
-                    <img id="user-lizard-button-image-gray" alt="image gray button"
-                        src="./assets/images/webp/button-gray.webp">
-                    <img id="user-lizard-button-image-green" alt="image green button"
-                        src="./assets/images/webp/button-green.webp">
-                    <img id="user-lizard-button-image-red" alt="image red button"
-                        src="./assets/images/webp/button-red.webp">
-                </div>
-                <div id="user-spock-button" class="player-option-picker">
-                    <img id="user-spock-button-image" alt="image of spock" src="./assets/images/webp/spock.webp">
-                    <img id="user-spock-button-image-gray" alt="image gray button"
-                        src="./assets/images/webp/button-gray.webp">
-                    <img id="user-spock-button-image-green" alt="image green button"
-                        src="./assets/images/webp/button-green.webp">
-                    <img id="user-spock-button-image-red" alt="image red button"
-                        src="./assets/images/webp/button-red.webp">
-                </div>
+            <div id="user-lizard-button" class="player-option-picker">
+                <img id="user-lizard-button-image" alt="image of lizard" src="./assets/images/webp/lizard.webp">
+                <img id="user-lizard-button-image-gray" alt="image gray button"
+                    src="./assets/images/webp/button-gray.webp">
+            </div>
+            <div id="user-spock-button" class="player-option-picker">
+                <img id="user-spock-button-image" alt="image of spock" src="./assets/images/webp/spock.webp">
+                <img id="user-spock-button-image-gray" alt="image gray button"
+                    src="./assets/images/webp/button-gray.webp">
             </div>
         </div>
-    </section>
+    </div>
     <script type="text/javascript" src="./assets/jscript/game.js"></script>
 </body>
 
