Adjust font sizes to the new font

--- a/game.html
+++ b/game.html
@@ -36,8 +36,8 @@
         <div id="user-pick-image-panel"><img id="user-pick-image" alt="image question mark"
                 src="./assets/images/webp/question.webp"></div>
         <div id="versus-text">VS.</div>
-        <div id="message-text">message</div>
-        <div id="outcome-text">Outcome!</div>
+        <div id="message-text"></div>
+        <div id="outcome-text"></div>
         <div id="user-pick-image"></div>
         <div id="restart-button" onclick="view.startOverOnClick();">
             <img alt="image question mark" src="./assets/images/webp/restart.webp">
