Implement message-display at the top of the game page

--- a/index.html
+++ b/index.html
@@ -19,18 +19,38 @@
     </header>
     <section>
         <div class="canvas">
-            <div class="cube">
+            <div class="cube">                
                 <div class="face-rock"></div>
                 <div class="pic-rock"></div>
+                <div class="background-rock"></div>
                 <div class="face-paper"></div>
                 <div class="pic-paper"></div>
+                <div class="background-paper"></div>
                 <div class="face-scissors"></div>
                 <div class="pic-scissors"></div>
+                <div class="background-scissors"></div>
                 <div class="face-lizard"></div>
                 <div class="pic-lizard"></div>
+                <div class="background-lizard"></div>
                 <div class="face-spock"></div>
                 <div class="pic-spock"></div>
+                <div class="background-spock"></div>
                 <div class="glow"></div>
+            </div>
+            <div class="rules-panel">
+                <h2>RULES</h2>
+                <ul>
+                    <li>Scissors cuts paper</li>
+                    <li>Paper covers rock</li>
+                    <li>Rock crushes lizard</li>
+                    <li>Lizard poisons Spock</li>
+                    <li>Spock smashes scissors</li>
+                    <li>Scissors decapitates lizard</li>
+                    <li>Lizard eats paper</li>
+                    <li>Paper disproves Spock</li>
+                    <li>Spock vaporizes rock</li>
+                    <li>Rock crushes scissors</li>
+                </ul>
             </div>
         </div>
     </section>
