--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1>Game</h1>
+        <h1 id="message-display"></h1>
     </header>
     <div id="canvas">
         <div id="computer-score">0</div>
