--- a/game.html
+++ b/game.html
@@ -13,7 +13,9 @@
 
 <body>
     <header>
-        <h1 id="message-display"></h1>
+        <div id="header-message">
+            <h1 id="message-display"></h1>
+        </div>
     </header>
     <div id="canvas">
         <div id="computer-score">0</div>
