Add landscape media queries

--- a/game.html
+++ b/game.html
@@ -47,10 +47,16 @@
         </div>
         <div id="fourth-row">
             <div id="message-text"></div>
-        </div>        
-        <div id="restart-button" onclick="view.startOverOnClick();">
-            <img alt="image question mark" src="./assets/images/webp/restart.webp">
         </div>
+        <div id="fifth-row">
+            <div id="restart-button" onclick="view.startOverOnClick();">
+                <img alt="image question mark" src="./assets/images/webp/restart.webp">
+            </div>
+            <div id="home-button" onclick="view.startOverOnClick();">
+                <img alt="image question mark" src="./assets/images/webp/home.webp">
+            </div>
+        </div>
+
         <!-- Inside this div live the buttons user can click to play the game -->
         <div id="user-option-panel" class="gray-border">
             <div id="user-rock-button" class="player-option-picker">
