implement an increasing difficulty level in javascript

--- a/game.html
+++ b/game.html
@@ -52,7 +52,7 @@
             <div id="restart-button" onclick="view.startOverOnClick();">
                 <img alt="image question mark" src="./assets/images/webp/restart.webp">
             </div>
-            <div id="home-button" onclick="view.startOverOnClick();">
+            <div id="home-button" onclick="view.homeButtonOnClick();">
                 <img alt="image question mark" src="./assets/images/webp/home.webp">
             </div>
         </div>
