remove aria labels

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Rock, Paper, Scissors, Lizard, Spock Game</title>
-
-    <script type="text/javascript" src="./assets/jscript/game.js"></script>
+    
     <link rel="stylesheet" href="./assets/css/cover.css">
 </head>
 
@@ -19,7 +18,7 @@
     </header>
     <section>
         <div class="canvas">            
-            <div class="cube" aria-label="animation of a rotating cube">
+            <div class="cube">
                 <div class="face-rock"></div>
                 <div class="pic-rock"></div>
                 <div class="background-rock"></div>
@@ -53,7 +52,7 @@
                     <li>Rock crushes scissors</li>
                 </ul>
             </div>
-            <div id="beginButton" aria-label="click here to proceed to the game"><a href="game.html">BEGIN</a></div>
+            <div id="beginButton"><a href="game.html">BEGIN</a></div>
             <div class="quick-manual">
                 <h2>Quick Manual</h2>
                 <hr>
