fill the heading for message display for the validator

--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="header-message">
-            <h1 id="message-display"></h1>
+            <h1 id="message-display">message</h1>
         </div>
     </header>
     <div id="canvas">
