Add a few more comments to game CSS

--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="game, rock paper scissors lizard spock, free online game">
+    <meta name="description" content="free online game of rock paper scissors lizard spock">
+    <meta name="author" content="Dimitri Edel">
     <title>Home - Rock, Paper, Scissors, Lizard, Spock Game</title>
-    
+
     <link rel="stylesheet" href="./assets/css/cover.css">
 </head>
 
 <body>
     <header>
         <h1 aria-label="Name of the game: rock, paper, scissors, lizard, spock">Rock, Paper, Scissors, Lizard, Spock
-        </h1>        
+        </h1>
     </header>
     <section>
-        <div class="canvas">            
+        <div class="canvas">
             <div class="cube">
                 <div class="face-rock"></div>
                 <div class="pic-rock"></div>
@@ -37,33 +40,37 @@
                 <div class="glow"></div>
             </div>
             <div class="rules-panel">
-                <h2>RULES</h2>
-                <hr>
-                <ul>
-                    <li>Scissors cuts paper</li>
-                    <li>Paper covers rock</li>
-                    <li>Rock crushes lizard</li>
-                    <li>Lizard poisons Spock</li>
-                    <li>Spock smashes scissors</li>
-                    <li>Scissors decapitates lizard</li>
-                    <li>Lizard eats paper</li>
-                    <li>Paper disproves Spock</li>
-                    <li>Spock vaporizes rock</li>
-                    <li>Rock crushes scissors</li>
-                </ul>
+                <article>
+                    <h2>RULES</h2>
+                    <hr>
+                    <ul>
+                        <li>Scissors cuts paper</li>
+                        <li>Paper covers rock</li>
+                        <li>Rock crushes lizard</li>
+                        <li>Lizard poisons Spock</li>
+                        <li>Spock smashes scissors</li>
+                        <li>Scissors decapitates lizard</li>
+                        <li>Lizard eats paper</li>
+                        <li>Paper disproves Spock</li>
+                        <li>Spock vaporizes rock</li>
+                        <li>Rock crushes scissors</li>
+                    </ul>
+                </article>
             </div>
             <div id="beginButton"><a href="game.html">BEGIN</a></div>
             <div class="quick-manual">
-                <h2>Quick Manual</h2>
-                <hr>
-                <p>In the top-center of the screen lives a settings selector. It allows you to choose the number of
-                    rounds you want to play</p>
-                <p>Difficulty of the game increases by: <q> The higher the number of rounds the more difficult it is</q></p>
-
-                <p>You can restart the game at any moment by clicking on the restart button</p>
-
-                <p>When the game is over you must click on the restart button to start a new game </p>
-                
+                <article>
+                    <h2>Quick Manual</h2>
+                    <hr>
+                    <p>In the top-center of the screen lives a settings selector. It allows you to choose the number of
+                        rounds you want to play</p>
+                    <p>Difficulty of the game increases by: <q> The higher the number of rounds the more difficult it
+                            is</q>
+                    </p>
+                    <p>With every round one player gets one score point. If the round comes up a tie, then either player gets a score point.</p>
+                    <p>You can restart the game at any moment by clicking on the restart button</p>
+                    <p>When the game is over you must click on the restart button to start a new game </p>
+                </article>
             </div>
         </div>
     </section>
