--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="game, rock paper scissors lizard spock, free online game">
+    <meta name="description" content="free online game of rock paper scissors lizard spock">
     <meta name="author" content="Dimitri Edel">
     <title>Game - Rock, Paper, Scissors, Lizzard, Spock</title>
 
