--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Dimitri Edel">
     <title>Home - Rock, Paper, Scissors, Lizard, Spock Game</title>
 
-    <link rel="stylesheet" href="./assets/css/cover.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 
 <body>
