--- a/index.html
+++ b/index.html
@@ -19,61 +19,61 @@
         <h1 aria-label="Name of the game: rock, paper, scissors, lizard, spock">Rock, Paper, Scissors, Lizard, Spock
         </h1>
     </header>
-    <section>
-        <div class="canvas">
-            <div class="cube">
-                <div class="face-rock"></div>
-                <div class="pic-rock"></div>
-                <div class="background-rock"></div>
-                <div class="face-paper"></div>
-                <div class="pic-paper"></div>
-                <div class="background-paper"></div>
-                <div class="face-scissors"></div>
-                <div class="pic-scissors"></div>
-                <div class="background-scissors"></div>
-                <div class="face-lizard"></div>
-                <div class="pic-lizard"></div>
-                <div class="background-lizard"></div>
-                <div class="face-spock"></div>
-                <div class="pic-spock"></div>
-                <div class="background-spock"></div>
-                <div class="glow"></div>
-            </div>
-            <div class="rules-panel">
-                <article>
-                    <h2>RULES</h2>
-                    <hr>
-                    <ul>
-                        <li>Scissors cuts paper</li>
-                        <li>Paper covers rock</li>
-                        <li>Rock crushes lizard</li>
-                        <li>Lizard poisons Spock</li>
-                        <li>Spock smashes scissors</li>
-                        <li>Scissors decapitates lizard</li>
-                        <li>Lizard eats paper</li>
-                        <li>Paper disproves Spock</li>
-                        <li>Spock vaporizes rock</li>
-                        <li>Rock crushes scissors</li>
-                    </ul>
-                </article>
-            </div>
-            <div id="beginButton"><a href="game.html">BEGIN</a></div>
-            <div class="quick-manual">
-                <article>
-                    <h2>Quick Manual</h2>
-                    <hr>
-                    <p>In the top-center of the screen lives a settings selector. It allows you to choose the number of
-                        rounds you want to play</p>
-                    <p>Difficulty of the game increases by: <q> The higher the number of rounds the more difficult it
-                            is</q>
-                    </p>
-                    <p>With every round one player gets one score point. If the round comes up a tie, then either player gets a score point.</p>
-                    <p>You can restart the game at any moment by clicking on the restart button</p>
-                    <p>When the game is over you must click on the restart button to start a new game </p>
-                </article>
-            </div>
+
+    <div class="canvas">
+        <div class="cube">
+            <div class="face-rock"></div>
+            <div class="pic-rock"></div>
+            <div class="background-rock"></div>
+            <div class="face-paper"></div>
+            <div class="pic-paper"></div>
+            <div class="background-paper"></div>
+            <div class="face-scissors"></div>
+            <div class="pic-scissors"></div>
+            <div class="background-scissors"></div>
+            <div class="face-lizard"></div>
+            <div class="pic-lizard"></div>
+            <div class="background-lizard"></div>
+            <div class="face-spock"></div>
+            <div class="pic-spock"></div>
+            <div class="background-spock"></div>
+            <div class="glow"></div>
         </div>
-    </section>
+        <div class="rules-panel">
+            <article>
+                <h2>RULES</h2>
+                <hr>
+                <ul>
+                    <li>Scissors cuts paper</li>
+                    <li>Paper covers rock</li>
+                    <li>Rock crushes lizard</li>
+                    <li>Lizard poisons Spock</li>
+                    <li>Spock smashes scissors</li>
+                    <li>Scissors decapitates lizard</li>
+                    <li>Lizard eats paper</li>
+                    <li>Paper disproves Spock</li>
+                    <li>Spock vaporizes rock</li>
+                    <li>Rock crushes scissors</li>
+                </ul>
+            </article>
+        </div>
+        <div id="beginButton"><a href="game.html">BEGIN</a></div>
+        <div class="quick-manual">
+            <article>
+                <h2>Quick Manual</h2>
+                <hr>
+                <p>In the top-center of the screen lives a settings selector. It allows you to choose the number of
+                    rounds you want to play</p>
+                <p>Difficulty of the game increases by: <q> The higher the number of rounds the more difficult it
+                        is</q>
+                </p>
+                <p>With every round one player gets one score point. If the round comes up a tie, then either player
+                    gets a score point.</p>
+                <p>You can restart the game at any moment by clicking on the restart button</p>
+                <p>When the game is over you must click on the restart button to start a new game </p>
+            </article>
+        </div>
+    </div>
 </body>
 
 </html>
